# littinit

./: Cargo.toml  README.md  README_cn.md  build.rs  note.md
bindgen/: loop.h
examples/: chroot.rs  get_fs_dev.rs  loop_setup.rs  switch_root.rs
src/: init_entry.rs  lib.rs  main.rs
src/util_linux/: chroot.rs  loopdev.rs  mod.rs  mount.rs  switch_root.rs
