[package]
name = "littinit"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
fork = "0.2.0"
nix = { version = "0.30.1", features = ["fs", "ioctl", "mount", "process"] }
serde = { version = "1.0.219", features = ["derive"] }


# [[example]]
# name = "mount"
# src = "examples/mount.rs"

[[example]]
name = "switch_root"

[[example]]
name = "chroot"

[[example]]
name = "get_fs_dev"

[[example]]
name = "loop_setup"

[build-dependencies]
bindgen = "0.71.1"
